k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nemesis
  labels:
    name: nemesis
    environment: production
